#1134 issue with ui input not having valign but using table-cell

--- a/src/definitions/elements/input.less
+++ b/src/definitions/elements/input.less
@@ -265,6 +265,7 @@
 
 .ui.action.input > input {
   display: table-cell;
+  vertical-align: top;
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
   border-right: none;
@@ -272,7 +273,7 @@
 .ui.action.input > .button,
 .ui.action.input > .buttons {
   display: table-cell;
-
+  vertical-align: top;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   white-space: nowrap;
